k8s/apps/network/cloudflared/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: &name cloudflared
spec:
  selector:
    app.kubernetes.io/name: *name
  ports:
    - name: metrics
      port: 8080
      targetPort: 8080
